# hackathon-eth-global-scaling-ethereum-2024

./: README.md
backend/: Cargo.toml
backend/host/: Cargo.toml
backend/host/src/: main.rs
backend/methods/guest/: Cargo.toml
backend/methods/guest/src/: main.rs
frontend/: .envrc.example  package-lock.json  package.json
frontend/src/components/: SafeAuthTest.tsx
frontend/src/components/Dashboard/: Dasboard.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Header/: Header.tsx  WalletButton.tsx
frontend/src/components/Layout/: index.tsx
frontend/src/components/MonacoEditor/: IDE.tsx  MonacoEditor.tsx
frontend/src/components/Sidebar/: Buttons.tsx  ClipBoardCopyButton.tsx  CompileSol.tsx  ContractFunctionsCall.tsx  DynamicComponentLoader.tsx  RunScript.tsx  Sidebar.tsx
frontend/src/contexts/: CompileContext.tsx  IDEContext.tsx  WalletContext.tsx
frontend/src/hooks/: useCompileCode.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/api/: compile.ts
frontend/src/services/: web3Auth.ts
frontend/src/styles/: globals.css
frontend/src/utils/: createSafe.ts  safeAuth.ts
