[workspace]
resolver = "2"
members = ["host", "methods"]

[workspace.dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
bonsai-sdk = { version = "0.7" }
risc0-build = { version = "0.21", features = ["docker"] }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.9" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", branch = "release-0.9" }
anyhow = { version = "1.0.75" }
bincode = { version = "1.3" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
